# Grounding-Video-Reasoning-in-Physical-SignalGrounding-Video-Reasoning-in-Physical-Signal

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: dataset_card.json  model_registry.json  reproduction_config.example.json
examples/annotations/: mini_annotations.json
examples/predictions/: mini_predictions.jsonl
examples/prompts/: real_prompt_examples.json
grounding_video_reasoning/: __init__.py  bbox_normalization.py  io.py  metrics.py  prediction_validation.py  prompting.py  schema.py  video_perturbation.py
scripts/: make_reproduction_commands.py  run_inference_template.py  score_predictions.py  validate_examples.py
